--- a/webimages/index.html
+++ b/webimages/index.html
@@ -117,30 +117,29 @@
     </form>
 </section>
 
-
-<section id="job-requirements" >
+<section id="job-requirements">
     <h2 style="margin-bottom: 20px;">Job Requirements</h2>
     <form>
         <div style="display: flex; flex-wrap: wrap; margin-bottom: 20px;">
-            <div style="flex: 1; min-width: 250px; padding: 15px; margin-right: 20px; background-color: #f8f8f8; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
-                <label style="display: block; margin-bottom: 10px;">
-                    <input type="checkbox" required>
+            <div style="flex: 1; min-width: 250px; padding: 15px; margin-right: 20px;  border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+                <label style="display: flex; align-items: center; margin-bottom: 10px;">
+                    <input type="checkbox" required style="margin-right: 10px;">
                     Are you able to lift up to 50 lbs?
                 </label>
-                <label style="display: block; margin-bottom: 10px;">
-                    <input type="checkbox" required>
+                <label style="display: flex; align-items: center; margin-bottom: 10px;">
+                    <input type="checkbox" required style="margin-right: 10px;">
                     Can you work nights?
                 </label>
-                <label style="display: block; margin-bottom: 10px;">
-                    <input type="checkbox" required>
+                <label style="display: flex; align-items: center; margin-bottom: 10px;">
+                    <input type="checkbox" required style="margin-right: 10px;">
                     Do you have a driver's license?
                 </label>
-                <label style="display: block; margin-bottom: 10px;">
-                    <input type="checkbox" required>
+                <label style="display: flex; align-items: center; margin-bottom: 10px;">
+                    <input type="checkbox" required style="margin-right: 10px;">
                     Have you been cited for distracted driving or driving under the influence (DUI) in the past 3 years?
                 </label>
             </div>
-            <div style="flex: 1; min-width: 250px; padding: 15px; margin-right: 20px; background-color: #f8f8f8; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+            <div style="flex: 1; min-width: 250px; padding: 15px; margin-right: 20px;  border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
                 <label style="display: block; margin-bottom: 10px;">How many hours weekly can you work?</label>
                 <input type="text" placeholder="Enter hours" style="width: 100%; padding: 10px; margin-bottom: 15px; border-radius: 5px; border: 1px solid #ccc; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
 
@@ -157,9 +156,10 @@
                     <option>Texas</option>
                 </select>
             </div>
-            <div style="flex: 1; min-width: 250px; padding: 15px; background-color: #f8f8f8; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
-                <label style="display: block; margin-bottom: 10px;">Have you been fired from a job?</label>
-                <input type="checkbox" style="margin-bottom: 15px;">
+            <div style="flex: 1; min-width: 250px; padding: 15px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+                <label style="display: flex; align-items: center; margin-bottom: 10px;">Have you been fired from a job?
+                    <input type="checkbox" style="margin-left: 10px;">
+                </label>
                 <label style="display: block; margin-bottom: 10px;">If yes, please explain:</label>
                 <textarea placeholder="Explain here..." style="width: 100%; padding: 10px; margin-bottom: 15px; border-radius: 5px; border: 1px solid #ccc; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);"></textarea>
 
@@ -170,6 +170,7 @@
         <button type="submit" style="padding: 12px 20px; margin-top: 20px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer;">Submit</button>
     </form>
 </section>
+
 
 <section id="background">
     <h2>Background</h2>
