--- a/web transfer/Service/staff.html
+++ b/web transfer/Service/staff.html
@@ -229,7 +229,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                         <div class="col-md-4 col-sm-6">
                             <div class="card">
                                 <div class="img-wrapper">
-                                    <img class="img-fluid" src="/IMAGES/profile.png"> 
+                                    <img class="img-fluid" src="/IMAGES/Esau Ogada.jpeg"> 
                                 </div>
                                 <div class="card-body">
                                     <div class="card-title">
@@ -244,7 +244,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                         <div class="col-md-4 col-sm-6">
                             <div class="card">
                                 <div class="img-wrapper">
-                                    <img class="img-fluid" src="/IMAGES/profile.png"> 
+                                    <img class="img-fluid" src="/IMAGES/William Ogeda.jpeg"> 
                                 </div>
                                 <div class="card-body">
                                     <div class="card-title">
@@ -259,7 +259,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                         <div class="col-md-4 col-sm-6">
                             <div class="card">
                                 <div class="img-wrapper">
-                                    <img class="img-fluid" src="/IMAGES/profile.png"> 
+                                    <img class="img-fluid" src="/IMAGES/Dorothy Olweny.jpeg"> 
                                 </div>
                                 <div class="card-body">
                                     <div class="card-title">
@@ -274,7 +274,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                         <div class="col-md-4 col-sm-6">
                             <div class="card">
                                 <div class="img-wrapper">
-                                    <img class="img-fluid" src="/IMAGES/profile.png"> 
+                                    <img class="img-fluid" src="/IMAGES/Hesbon Opinya.jpeg"> 
                                 </div>
                                 <div class="card-body">
                                     <div class="card-title">
@@ -289,7 +289,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                         <div class="col-md-4 col-sm-6">
                             <div class="card">
                                 <div class="img-wrapper">
-                                    <img class="img-fluid" src="/IMAGES/profile.png"> 
+                                    <img class="img-fluid" src="/IMAGES/Tom Onyona.jpeg"> 
                                 </div>
                                 <div class="card-body">
                                     <div class="card-title">
@@ -304,7 +304,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                         <div class="col-md-4 col-sm-6">
                             <div class="card">
                                 <div class="img-wrapper">
-                                    <img class="img-fluid" src="/IMAGES/profile.png"> 
+                                    <img class="img-fluid" src="/IMAGES/Joshua Osawa.jpeg"> 
                                 </div>
                                 <div class="card-body">
                                     <div class="card-title">
@@ -319,7 +319,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                         <div class="col-md-4 col-sm-6">
                             <div class="card">
                                 <div class="img-wrapper">
-                                    <img class="img-fluid" src="/IMAGES/profile.png"> 
+                                    <img class="img-fluid" src="/IMAGES/Paul Onyinge.jpeg"> 
                                 </div>
                                 <div class="card-body">
                                     <div class="card-title">
@@ -334,7 +334,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                         <div class="col-md-4 col-sm-6">
                             <div class="card">
                                 <div class="img-wrapper">
-                                    <img class="img-fluid" src="/IMAGES/profile.png"> 
+                                    <img class="img-fluid" src="/IMAGES/Abraham Noi.jpeg"> 
                                 </div>
                                 <div class="card-body">
                                     <div class="card-title">
@@ -343,7 +343,20 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                                     </div>
                                 </div>
                             </div>
-                        </div>                 
+                        </div>     
+                        <div class="col-md-4 col-sm-6">
+                            <div class="card">
+                                <div class="img-wrapper">
+                                    <img class="img-fluid" src="/IMAGES/Joshua Alwanda.jpeg"> 
+                                </div>
+                                <div class="card-body">
+                                    <div class="card-title">
+                                        <h3>Joshua Alwanda</h3>
+                                        <p>Member</p> 
+                                    </div>
+                                </div>
+                            </div>
+                        </div>              
            
         </div>
     </div>
@@ -356,7 +369,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             <div class="col-md-4 col-sm-6">
                 <div class="card">
                     <div class="img-wrapper">
-                        <img class="img-fluid" src="/IMAGES/profile.png"> 
+                        <img class="img-fluid" src="/IMAGES/Jared Ojwando.jpeg"> 
                     </div>
                     <div class="card-body">
                         <div class="card-title">
@@ -371,7 +384,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             <div class="col-md-4 col-sm-6">
                 <div class="card">
                     <div class="img-wrapper">
-                        <img class="img-fluid" src="/IMAGES/profile.png"> 
+                        <img class="img-fluid" src="/IMAGES/Rosemary Okoth.jpeg"> 
                     </div>
                     <div class="card-body">
                         <div class="card-title">
@@ -384,7 +397,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             <div class="col-md-4 col-sm-6">
                 <div class="card">
                     <div class="img-wrapper">
-                        <img class="img-fluid" src="/IMAGES/profile.png"> 
+                        <img class="img-fluid" src="/IMAGES/Allan Athembo.jpeg"> 
                     </div>
                     <div class="card-body">
                         <div class="card-title">
